Import of SHARIFULN/MojoX-Renderer-Mail-0.42 from CPAN.
gitpan-cpan-distribution: MojoX-Renderer-Mail
gitpan-cpan-version:      0.42
gitpan-cpan-path:         SHARIFULN/MojoX-Renderer-Mail-0.42.tar.gz
gitpan-cpan-author:       SHARIFULN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MojoX-Renderer-Mail
 
+0.42   2010-08-18/19:22
+	Fixed CPAN Testers report
+
 0.41   2010-08-17/11:05
 	Fixed MANIFEST and docs.
 	TODO: more tests
